# hifi

./: CMakeLists.txt  hifi_android.py  hifi_utils.py  hifi_vcpkg.py  prebuild.py
android/: settings.gradle
android/apps/focusInterface/: CMakeLists.txt  build.gradle
android/apps/focusInterface/src/androidTest/java/io/highfidelity/focusInterface/: ExampleInstrumentedTest.java
android/apps/focusInterface/src/main/: AndroidManifest.xml
android/apps/focusInterface/src/main/cpp/: native.cpp
android/apps/focusInterface/src/main/java/io/highfidelity/focusInterface/: Interface.java  InterfaceActivity.java  PermissionsChecker.java
android/apps/focusInterface/src/test/java/io/highfidelity/focusInterface/: ExampleUnitTest.java
android/focusInterface/: build.gradle
android/focusInterface/src/main/: AndroidManifest.xml
android/focusInterface/src/main/java/io/highfidelity/focusInterface/: PermissionsChecker.java
android/focusInterface/src/main/res/values/: strings.xml
android/libraries/qt/: build.gradle
cmake/: compiler.cmake
cmake/macros/: TargetBullet.cmake  TargetNvtt.cmake  TargetPolyvox.cmake  TargetViveFocusMobile.cmake
interface/resources/qml/hifi/simplifiedUI/topBar/: SimplifiedTopBar.qml
interface/src/: Application.cpp
interface/src/graphics/: GraphicsEngine.cpp
interface/src/scripting/: AudioDevices.cpp
libraries/audio-client/src/: AudioClient.cpp  AudioClient.h
libraries/gpu/src/gpu/: Batch.h
libraries/graphics-scripting/src/graphics-scripting/: GraphicsScriptingInterface.h
libraries/physics/src/: PhysicsEngine.cpp
libraries/viveFocusPlugin/: CMakeLists.txt
libraries/viveFocusPlugin/src/: ViveFocusDisplayPlugin.cpp  ViveFocusDisplayPlugin.h
scripts/: defaultScripts.js
scripts/+android_interface/: defaultScripts.js
scripts/simplifiedUI/ui/: simplifiedUI.js
